--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://dannyvc95.github.io/react-workshop",
   "name": "react-workshop",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +12,8 @@
     "semantic-ui-react": "^1.2.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh -pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
